--- a/assets/css/style-production.css
+++ b/assets/css/style-production.css
@@ -629,6 +629,10 @@ video {
   height: 2rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .min-h-\[300px\] {
   min-height: 300px;
 }
@@ -673,6 +677,18 @@ video {
   width: 5%;
 }
 
+.w-\[250px\] {
+  width: 250px;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-\[260px\] {
+  width: 260px;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -711,6 +727,14 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -822,6 +846,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -891,6 +920,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(45 46 49 / var(--tw-text-opacity));
+}
+
 .line-through {
   text-decoration-line: line-through;
 }
@@ -951,4 +985,9 @@ h6 {
 .hover\:text-udemy-dark:hover {
   --tw-text-opacity: 1;
   color: rgb(64 27 156 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:text-udemy {
+  --tw-text-opacity: 1;
+  color: rgb(86 36 208 / var(--tw-text-opacity));
 }
