Crear el menu 'Categorias'

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,7 @@ h5,
 h6 {
     @apply font-heading font-semibold;
 }
+
+.menu-category-active {
+    @apply after:absolute after:bg-primary after:-bottom-3 after:left-1/3 after:block after:border-b after:border-[#2d2f31] after:rotate-45 after:h-4 after:w-4
+}
