--- a/assets/css/style-production.css
+++ b/assets/css/style-production.css
@@ -617,6 +617,10 @@ video {
   height: 0.75rem;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .h-5 {
   height: 1.25rem;
 }
@@ -627,10 +631,6 @@ video {
 
 .h-8 {
   height: 2rem;
-}
-
-.h-4 {
-  height: 1rem;
 }
 
 .min-h-\[300px\] {
@@ -649,6 +649,10 @@ video {
   width: 0.75rem;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .w-5 {
   width: 1.25rem;
 }
@@ -665,6 +669,10 @@ video {
   width: 240px;
 }
 
+.w-\[260px\] {
+  width: 260px;
+}
+
 .w-\[300px\] {
   width: 300px;
 }
@@ -675,18 +683,6 @@ video {
 
 .w-\[5\%\] {
   width: 5%;
-}
-
-.w-\[250px\] {
-  width: 250px;
-}
-
-.w-4 {
-  width: 1rem;
-}
-
-.w-\[260px\] {
-  width: 260px;
 }
 
 .grow {
@@ -717,6 +713,14 @@ video {
   justify-content: space-between;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-3 {
   gap: 0.75rem;
 }
@@ -729,12 +733,8 @@ video {
   gap: 1.5rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
-.gap-1 {
-  gap: 0.25rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
@@ -772,6 +772,10 @@ video {
 
 .border-l-0 {
   border-left-width: 0px;
+}
+
+.border-t {
+  border-top-width: 1px;
 }
 
 .border-gray-300 {
@@ -841,14 +845,19 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-2 {
@@ -920,17 +929,18 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-primary {
-  --tw-text-opacity: 1;
-  color: rgb(45 46 49 / var(--tw-text-opacity));
-}
-
 .line-through {
   text-decoration-line: line-through;
 }
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 html {
@@ -947,6 +957,76 @@ h5,
 h6 {
   font-family: Noto Serif JP, serif;
   font-weight: 600;
+}
+
+.menu-category-active::after {
+  position: absolute;
+  bottom: -0.75rem;
+  left: 33.333333%;
+  display: block;
+  height: 1rem;
+  width: 1rem;
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(45 47 49 / var(--tw-border-opacity));
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 46 49 / var(--tw-bg-opacity));
+}
+
+.after\:absolute::after {
+  content: var(--tw-content);
+  position: absolute;
+}
+
+.after\:-bottom-3::after {
+  content: var(--tw-content);
+  bottom: -0.75rem;
+}
+
+.after\:left-1\/3::after {
+  content: var(--tw-content);
+  left: 33.333333%;
+}
+
+.after\:block::after {
+  content: var(--tw-content);
+  display: block;
+}
+
+.after\:h-4::after {
+  content: var(--tw-content);
+  height: 1rem;
+}
+
+.after\:w-4::after {
+  content: var(--tw-content);
+  width: 1rem;
+}
+
+.after\:rotate-45::after {
+  content: var(--tw-content);
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.after\:border-b::after {
+  content: var(--tw-content);
+  border-bottom-width: 1px;
+}
+
+.after\:border-\[\#2d2f31\]::after {
+  content: var(--tw-content);
+  --tw-border-opacity: 1;
+  border-color: rgb(45 47 49 / var(--tw-border-opacity));
+}
+
+.after\:bg-primary::after {
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 46 49 / var(--tw-bg-opacity));
 }
 
 .hover\:cursor-not-allowed:hover {
@@ -972,6 +1052,11 @@ h6 {
   background-color: rgb(62 65 67 / var(--tw-bg-opacity));
 }
 
+.hover\:text-\[\#a7aada\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(167 170 218 / var(--tw-text-opacity));
+}
+
 .hover\:text-primary:hover {
   --tw-text-opacity: 1;
   color: rgb(45 46 49 / var(--tw-text-opacity));
@@ -985,6 +1070,11 @@ h6 {
 .hover\:text-udemy-dark:hover {
   --tw-text-opacity: 1;
   color: rgb(64 27 156 / var(--tw-text-opacity));
+}
+
+.hover\:text-\[\#a1a5d2\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(161 165 210 / var(--tw-text-opacity));
 }
 
 .group:hover .group-hover\:text-udemy {
