--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ h6 {
     @apply font-heading font-semibold;
 }
 
+.container {
+    @apply max-w-8xl mx-auto;
+}
+
 .menu-category-active {
     @apply after:absolute after:bg-primary after:-bottom-3 after:left-1/3 after:block after:border-b after:border-[#2d2f31] after:rotate-45 after:h-4 after:w-4
 }
