--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,7 @@ h6 {
 .menu-category-active {
     @apply after:absolute after:bg-primary after:-bottom-3 after:left-1/3 after:block after:border-b after:border-[#2d2f31] after:rotate-45 after:h-4 after:w-4
 }
+
+.cursos-tooltip {
+    @apply after:absolute after:-left-[9px] after:top-1/3 after:block after:border-b after:border-l after:border-gray-300 after:rotate-45 after:h-4 after:w-4  after:bg-white
+}
