--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,11 @@ h6 {
 .cursos-tooltip {
     @apply after:absolute after:-left-[9px] after:top-1/3 after:block after:border-b after:border-l after:border-gray-300 after:rotate-45 after:h-4 after:w-4  after:bg-white
 }
+
+.cursosTabs {
+    @apply px-2 py-4 font-semibold text-gray-500 hover:text-primary hover:cursor-pointer
+}
+
+.cursosTabsActive {
+    @apply text-primary
+}
