--- a/assets/css/style-production.css
+++ b/assets/css/style-production.css
@@ -616,6 +616,10 @@ video {
   z-index: 20;
 }
 
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
@@ -817,6 +821,22 @@ video {
   max-width: 450px;
 }
 
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
+}
+
+.max-w-\[200px\] {
+  max-width: 200px;
+}
+
+.max-w-\[344px\] {
+  max-width: 344px;
+}
+
 .grow {
   flex-grow: 1;
 }
@@ -875,6 +895,30 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-24 {
+  gap: 6rem;
+}
+
+.gap-32 {
+  gap: 8rem;
+}
+
+.gap-64 {
+  gap: 16rem;
+}
+
+.gap-48 {
+  gap: 12rem;
+}
+
+.gap-36 {
+  gap: 9rem;
 }
 
 .space-y-3 > :not([hidden]) ~ :not([hidden]) {
@@ -979,8 +1023,17 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .fill-\[\#b4690e\] {
   fill: #b4690e;
+}
+
+.fill-primary {
+  fill: #1c1d1f;
 }
 
 .object-cover {
@@ -1075,6 +1128,16 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-2 {
@@ -1184,6 +1247,11 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-primary {
+  --tw-text-opacity: 1;
+  color: rgb(28 29 31 / var(--tw-text-opacity));
 }
 
 .line-through {
