Crear clase 'Otros cursos autor'

--- a/assets/css/style-production.css
+++ b/assets/css/style-production.css
@@ -1727,6 +1727,11 @@ video {
   padding-bottom: 0.850rem;
 }
 
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1777,6 +1782,14 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pt-6 {
+  padding-top: 1.5rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
 }
 
 .text-left {
